--- a/Mark II/26-06-2023.md
+++ b/Mark II/26-06-2023.md
@@ -1,12 +1,28 @@
                                 26-06-2023
 # Token
-When the compiler is processing the source code of a C++ program; each group of chars separated by a whitespace is called a token.
+When the compiler is processing the source code of a C++ program; 
+each group of chars separated by a whitespace is called a token.
 
 Tokens are the smallest individual units in a program. 
 A C++ prgram is written using the following tokens.
 
-1. Keywords
-2. Identifiers
-3. Constants
+1. Keywords: eg, int, cout, endl
+2. Identifiers: int age, char hello[]
+3. Constants:
 4. Strings
-5. Operators
+5. Operators: used to perform operation on variables and values
+    e.g 100 + 50 the  '+' is the operator
+
+## Types of Operators
+1. Arithimetic: 
+    Common math ops; 
+        add(+), increment(++)
+        minus(-), decrement(--)
+        divide(/), 
+        modulo(%), 
+        mutliply(*), exponentiation (**)
+2. Assingnmnet: equals plus-equals minus-equals times-equals...
+3. Comparison
+4. Logical
+5. Bitwise 
+
