--- a/Mark II/26-06-2023.md
+++ b/Mark II/26-06-2023.md
@@ -21,8 +21,21 @@ A C++ prgram is written using the following tokens.
         divide(/), 
         modulo(%), 
         mutliply(*), exponentiation (**)
-2. Assingnmnet: equals plus-equals minus-equals times-equals...
+2. Assignment: equals plus-equals minus-equals times-equals...
 3. Comparison
 4. Logical
 5. Bitwise 
 
+### ASSIGNMENT:
+Based on Arithimetic operators discussed, 
+write a program that requests you to input 
+your age
+and 
+the age of your brother
+
+a) The Program should add the two ages together and print the result;
+b) Calculate the difference between the ages and print it.
+c) Multiply them.
+d) Calculate the division remainder of you and your brothers age and print
+e) INcrement your age by 1 and decrement your brother's age by one.
+All this should be displayed on a single screen. Use approrpiate data types.
