--- a/HTML,CSS,JS/Mark II/26-06-2023.md
+++ b/HTML,CSS,JS/Mark II/26-06-2023.md
@@ -39,3 +39,7 @@ c) Multiply them.
 d) Calculate the division remainder of you and your brothers age and print
 e) INcrement your age by 1 and decrement your brother's age by one.
 All this should be displayed on a single screen. Use approrpiate data types.
+
+
+Logical Operators
+Used to determine the logic between variables and values.
