Added dividebyzero exception handling

--- a/HTML,CSS,JS/Mark II/26-06-2023.md
+++ b/HTML,CSS,JS/Mark II/26-06-2023.md
@@ -44,3 +44,6 @@ All this should be displayed on a single screen. Use approrpiate data types.
 Logical Operators
 Used to determine the logic between variables and values.
 your ands and or's and xor's
+
+### Exceptions
+System.
